# proto-oriskin

./: .env.example  .gitignore  Dockerfile  README.md  analysis.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schemas.py
app/: main.py
app/api/v1/endpoints/: analyze.py
app/core/: config.py
app/schemas/: analysis.py
app/services/: skin_analyzer.py
frontend-components/: .env.example  CameraCapture.jsx  Dockerfile  ResultSlider.jsx  SkinAnalysisContainer.jsx  api.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-components/src/: App.jsx  api.js  index.css
frontend-components/src/components/: CameraCapture.jsx  ResultSlider.jsx  SkinAnalysisContainer.jsx
