[project]
name = "skin-analysis-service"
version = "0.1.0"
description = "Microservice for AI-based Skin Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.4",
    "opencv-python-headless>=4.10.0.82",
    "pillow>=10.3.0",
    "pydantic-settings>=2.3.0",
    # M4 Optimization (mps) - keeping generic for now, allow pip to resolve best
    "torch>=2.3.0",
    "torchvision>=0.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
